cmake_minimum_required(VERSION 3.17)
project(STL_learn)

set(CMAKE_CXX_STANDARD 14)

add_executable(Namespace_namespace namespace/namespace.cpp)
add_executable(Namespace_setw namespace/setw.cpp)
add_executable(Extern_extern extern/extern.cpp extern/func.cpp)
add_executable(Template_template template/template.cpp)
add_executable(Ref_ref ref/ref.cpp)
add_executable(Ref_struct ref/struct.cpp)
add_executable(Link_test link/test.cpp)
add_executable(Class_class class/class.cpp)
add_executable(Class_const class/const.cpp)
add_executable(Static_object static/object.cpp)
add_executable(Static_variable static/variable.cpp)
add_executable(Lambda_variablecatch lambda/variablescatch.cpp)